Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-4876] [FunctionalTests.ClangModulesTestCase testModuleMapGenerationCases] : failed #5021

Closed
ankitspd opened this issue May 12, 2017 · 1 comment
Labels

Comments

@ankitspd
Copy link
Member

Previous ID SR-4876
Radar None
Original Reporter @aciidb0mb3r
Type Bug
Status Resolved
Resolution Done
Additional Detail from JIRA
Votes 0
Component/s llbuild, Package Manager
Labels Bug
Assignee None
Priority Medium

md5: 861c7d7844dc76e68a03cd212c97ddd4

Issue Description:

https://ci.swift.org//job/oss-swift-incremental-RA-osx/10083/consoleFull#-1217750404ee1a197b-acac-4b17-83cf-a53b95139a76

Most likely related to apple/swift-llbuild#155

Test Case '-[FunctionalTests.ClangModulesTestCase testModuleMapGenerationCases]' started.
/Users/buildnode/jenkins/workspace/oss-swift-incremental-RA-osx/swiftpm/Tests/FunctionalTests/ClangModuleTests.swift:128: error: -[FunctionalTests.ClangModulesTestCase testModuleMapGenerationCases] : failed - `swift build -c Release' failed:

executionFailure(error: terminated(1): /Users/buildnode/jenkins/workspace/oss-swift-incremental-RA-osx/buildbot_incremental/swiftpm-macosx-x86_64/release/swift-build --chdir /var/folders/_8/79jmzf2142z2xydc_01btlx00000gn/T/ClangModules_ModuleMapGenerationCases.nSOC2a/ClangModules_ModuleMapGenerationCases --configuration release, output: "warning: No include directory found for target \'NoIncludeDir\'. A library can not be imported without any public headers.Compile UmbrellaHeaderFlat UmbrellaHeader.c\nCompile UmbellaModuleNameInclude Jaz.c\nCompile FlatInclude FlatInclude.c\nCompile UmbrellaHeader UmbrellaHeader.c\nCompile NoIncludeDir Jaz.c\nCompile Swift Module \'Baz\' (1 sources)\n", stderr: "Assertion failed: (result == SQLITE_ROW), function getKeyForID, file /Users/buildnode/jenkins/workspace/oss-swift-incremental-RA-osx/llbuild/lib/Core/SQLiteBuildDB.cpp, line 535.\n0  swift-build-tool         0x000000010ecbdb0e llvm::sys::PrintStackTrace(llvm::raw_ostream&) + 46\n1  swift-build-tool         0x000000010ecbf4a9 PrintStackTraceSignalHandler(void*) + 25\n2  swift-build-tool         0x000000010ecbf7ad SignalHandler(int) + 541\n3  libsystem_platform.dylib 0x00007fffa393abba _sigtramp + 26\n4  libsystem_platform.dylib 000000000000000000 _sigtramp + 1550603360\n5  libsystem_c.dylib        0x00007fffa37c1420 abort + 129\n6  libsystem_c.dylib        0x00007fffa3788893 basename_r + 0\n7  swift-build-tool         0x000000010ec9c95e (anonymous namespace)::SQLiteBuildDB::getKeyForID(unsigned long long) + 478\n8  swift-build-tool         0x000000010ec67244 (anonymous namespace)::BuildEngineImpl::getRuleInfoForKey(unsigned long long) + 1060\n9  swift-build-tool         0x000000010ec63551 (anonymous namespace)::BuildEngineImpl::executeTasks(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&) + 8737\n10 swift-build-tool         0x000000010ec55bce (anonymous namespace)::BuildEngineImpl::build(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&) + 1070\n11 swift-build-tool         0x000000010ec5578b llbuild::core::BuildEngine::build(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&) + 43\n12 swift-build-tool         0x000000010ebd690c (anonymous namespace)::BuildSystemImpl::build(llbuild::buildsystem::BuildKey) + 1100\n13 swift-build-tool         0x000000010ebd6c61 (anonymous namespace)::BuildSystemImpl::build(llvm::StringRef) + 353\n14 swift-build-tool         0x000000010ebd6af3 llbuild::buildsystem::BuildSystem::build(llvm::StringRef) + 67\n15 swift-build-tool         0x000000010ec2e121 llbuild::buildsystem::BuildSystemFrontend::build(llvm::StringRef) + 289\n16 swift-build-tool         0x000000010ebbe9f7 execute(llvm::ArrayRef<std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > >) + 2135\n17 swift-build-tool         0x000000010ebbe179 main + 1113\n18 libdyld.dylib            0x00007fffa372d255 start + 1\nerror: signalled(6): /Users/buildnode/jenkins/workspace/oss-swift-incremental-RA-osx/buildbot_incremental/swiftpm-macosx-x86_64/release/swift-build-tool -f /private/var/folders/_8/79jmzf2142z2xydc_01btlx00000gn/T/ClangModules_ModuleMapGenerationCases.nSOC2a/ClangModules_ModuleMapGenerationCases/.build/release.yaml\n")

Test Case '-[FunctionalTests.ClangModulesTestCase testModuleMapGenerationCases]' failed (3.641 seconds).
@ddunbar
Copy link
Member

ddunbar commented May 12, 2017

My first patch was missing some necessary locking around the SQLite database connection.

Revised:
apple/swift-llbuild#157

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
@shahmishal shahmishal transferred this issue from apple/swift May 4, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
Projects
None yet
Development

No branches or pull requests

2 participants